syntax = "proto3";

package msger.api.msg;

option go_package = "github.com/ryanreadbooks/whimer/msger/api/msg";

// 消息类型枚举
enum MsgType {
  MSG_TYPE_UNSPECIFIED = 0;
  MSG_TYPE_TEXT = 1;   // 文本消息
  MSG_TYPE_IMAGE = 10; // 图片
  MSG_TYPE_VIDEO = 20; // 视频
}

message MsgContent {
  MsgType type = 1; // 消息类型
  string data = 2;  // 消息内容
}

// 消息状态
enum MsgStatus {
  MSG_STATUS_UNSPECIFIED = 0;
  MSG_STATUS_NORMAL = 1; // 正常
  MSG_STATUS_REVOKE = 2; // 撤回
}

// 消息定义
message Message {
  int64 msg_id = 1;
  int64 chat_id = 2;
  int64 group_id = 3; // TODO 预留群组消息字段
  int64 sender = 4;
  int64 receiver = 5;
  MsgStatus status = 6;
  MsgContent content = 7; // 消息内容
  int64 seq = 8;
}
